Update pp-binary-ints doc to 0.1.1-1-g88496ac.

--- a/pp-binary-ints/index.html
+++ b/pp-binary-ints/index.html
@@ -37,6 +37,6 @@
 # (* All the above options can be combined *);;
 # Pp_Bin.to_string_with ~flags:Pp_Bin.Flags.{ padding = Zeros; separators = true; prefix_non_zero = true; zero_printing = InheritNonZero } ~min_width:8 0;;
 - : string = &quot;0b0_0000&quot;
-# (* The library is careful not to write &quot;0b_&quot; when prefixing, 'b' is always follewd by a digit *);;
+# (* The library is careful not to write &quot;0b_&quot; when prefixing, 'b' is always followed by a digit *);;
 # Pp_Bin.to_string_with ~flags:Pp_Bin.Flags.{ padding = Zeros; separators = true; prefix_non_zero = true; zero_printing = InheritNonZero } ~min_width:7 0;;
 - : string = &quot;0b00000&quot;</code></pre></div></body></html>
