--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="pp-binary-ints/index.html">pp-binary-ints</a> <span class="version">0.1.1</span></li>
+      <li><a href="pp-binary-ints/index.html">pp-binary-ints</a> <span class="version">0.1.1-1-g88496ac</span></li>
       </ol>
       </div>
     </main>
